feat: 타이머 wheel picker 직접 구현

--- a/components/timer/picker/styles.css
+++ b/components/timer/picker/styles.css
@@ -1,3 +1,7 @@
-.w-full > div:first-child > div:last-child {
-  display: none !important;
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
